--- a/packages/beacon-sdk/package.json
+++ b/packages/beacon-sdk/package.json
@@ -35,15 +35,15 @@
     "url": "https://github.com/mavryk-network/beacon-sdk/issues"
   },
   "dependencies": {
-    "@mavrykdynamics/beacon-blockchain-substrate": "4.2.1",
-    "@mavrykdynamics/beacon-blockchain-tezos": "4.2.1",
-    "@mavrykdynamics/beacon-core": "4.2.1",
-    "@mavrykdynamics/beacon-dapp": "4.2.1",
-    "@mavrykdynamics/beacon-transport-matrix": "4.2.1",
-    "@mavrykdynamics/beacon-transport-postmessage": "4.2.1",
-    "@mavrykdynamics/beacon-types": "4.2.1",
-    "@mavrykdynamics/beacon-ui": "4.2.1",
-    "@mavrykdynamics/beacon-utils": "4.2.1",
-    "@mavrykdynamics/beacon-wallet": "4.2.1"
+    "@mavrykdynamics/beacon-blockchain-substrate": "^4.2.1",
+    "@mavrykdynamics/beacon-blockchain-tezos": "^4.2.1",
+    "@mavrykdynamics/beacon-core": "^4.2.1",
+    "@mavrykdynamics/beacon-dapp": "^4.2.1",
+    "@mavrykdynamics/beacon-transport-matrix": "^4.2.1",
+    "@mavrykdynamics/beacon-transport-postmessage": "^4.2.1",
+    "@mavrykdynamics/beacon-types": "^4.2.1",
+    "@mavrykdynamics/beacon-ui": "^4.2.1",
+    "@mavrykdynamics/beacon-utils": "^4.2.1",
+    "@mavrykdynamics/beacon-wallet": "^4.2.1"
   }
 }
