--- a/packages/beacon-transport-walletconnect/package.json
+++ b/packages/beacon-transport-walletconnect/package.json
@@ -34,9 +34,9 @@
     "url": "https://github.com/mavryk-network/beacon-sdk/issues"
   },
   "dependencies": {
-    "@mavrykdynamics/beacon-core": "4.2.1",
-    "@mavrykdynamics/beacon-types": "4.2.1",
-    "@mavrykdynamics/beacon-utils": "4.2.1",
+    "@mavrykdynamics/beacon-core": "^4.2.1",
+    "@mavrykdynamics/beacon-types": "^4.2.1",
+    "@mavrykdynamics/beacon-utils": "^4.2.1",
     "@walletconnect/sign-client": "^2.11.2"
   }
 }
