--- a/packages/beacon-wallet/package.json
+++ b/packages/beacon-wallet/package.json
@@ -35,8 +35,8 @@
     "url": "https://github.com/mavryk-network/beacon-sdk/issues"
   },
   "dependencies": {
-    "@mavrykdynamics/beacon-core": "4.2.1",
-    "@mavrykdynamics/beacon-transport-matrix": "4.2.1",
-    "@mavrykdynamics/beacon-transport-postmessage": "4.2.1"
+    "@mavrykdynamics/beacon-core": "^4.2.1",
+    "@mavrykdynamics/beacon-transport-matrix": "^4.2.1",
+    "@mavrykdynamics/beacon-transport-postmessage": "^4.2.1"
   }
 }
