--- a/packages/beacon-ui/package.json
+++ b/packages/beacon-ui/package.json
@@ -34,10 +34,10 @@
     "url": "https://github.com/mavryk-network/beacon-sdk/issues"
   },
   "dependencies": {
-    "@mavrykdynamics/beacon-core": "4.2.1",
-    "@mavrykdynamics/beacon-transport-postmessage": "4.2.1",
-    "@mavrykdynamics/beacon-types": "4.2.1",
-    "@mavrykdynamics/beacon-utils": "4.2.1",
+    "@mavrykdynamics/beacon-core": "^4.2.1",
+    "@mavrykdynamics/beacon-transport-postmessage": "^4.2.1",
+    "@mavrykdynamics/beacon-types": "^4.2.1",
+    "@mavrykdynamics/beacon-utils": "^4.2.1",
     "@walletconnect/utils": "2.11.2",
     "qrcode-svg": "^1.1.0",
     "solid-js": "^1.7.11"
